--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,3 @@
-# AcmeDemoBundle routes (to be removed)
-_demo:
-    resource: "@AcmeDemoBundle/Resources/config/routing.yml"
-    prefix: /demo
-
-_cmf_create:
-    resource: "@CmfCreateBundle/Resources/config/routing/rest.xml"
+ipc_application:
+    resource: "@IPCApplicationBundle/Resources/config/routing.xml"
+    prefix:   /
