--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,11 @@
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
 
+        "symfony-cmf/routing-bundle": "1.3.*",
+        "doctrine/phpcr-bundle": "1.2.*",
+        "doctrine/phpcr-odm": "1.2.*",
+        "jackalope/jackalope-doctrine-dbal": "1.1.*",
+
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
