--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -95,6 +95,19 @@ cmf_core:
         # basepath: /custom/basepath
     publish_workflow: false
 
+# seo handling
+cmf_seo:
+    title: IPC15 CMF - %%content_title%%
+    description: Talk with an SEO example. %%content_description%%
+
+sonata_seo:
+    page:
+        title: IPC15 CMF
+        metas:
+            name:
+              keywords: "CMF, Symfony, Routing, Content, PHPCR"
+
+
 swiftmailer:
     transport: "%mailer_transport%"
     host:      "%mailer_host%"
