--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
 
+        "lunetics/locale-bundle": "~2.3",
+
         "symfony-cmf/seo-bundle": "@dev",
 
         "symfony-cmf/simple-cms-bundle": "1.2.*",
