--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -24,6 +24,7 @@ parameters:
     mailer_password:   ~
 
     locale:            en
+    locales: [ en, de ]
     secret:            ThisTokenIsNotSoSecretChangeIt
 
     debug_toolbar:          true
