--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
 
         "lunetics/locale-bundle": "~2.3",
 
-        "symfony-cmf/seo-bundle": "@dev",
+        "symfony-cmf/seo-bundle": "1.3.*",
 
-        "symfony-cmf/simple-cms-bundle": "1.2.*",
+        "symfony-cmf/simple-cms-bundle": "1.3.*",
 
-        "symfony-cmf/routing-bundle": "1.3.*",
-        "doctrine/phpcr-bundle": "1.2.*",
-        "doctrine/phpcr-odm": "1.2.*",
+        "symfony-cmf/routing-bundle": "1.4.*",
+        "doctrine/phpcr-bundle": "1.3.*",
+        "doctrine/phpcr-odm": "1.3.*",
         "jackalope/jackalope-doctrine-dbal": "1.1.*",
 
         "sensio/distribution-bundle": "~3.0",
