add a hint on the parameters dist

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,11 +1,10 @@
 parameters:
-    database_driver:   pdo_sqlite
-    database_host:     ~
-    database_port:     ~
-    database_name:     ~
-    database_user:     ~
-    database_password: ~
-    database_path:     "%kernel.root_dir%/app.sqlite"
+    database_driver: pdo_mysql
+    database_host: 127.0.0.1
+    database_port: null
+    database_name: cmf_example
+    database_user: root
+    database_password: null
 
     phpcr_backend:
         # use Jackalope Doctrine DBAL
